Delete todos form the list

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <div>
                             Something to do 1...
                             <span href="#!" class="secondary-content">
-                                <a href="#!"><i class="material-icons">done</i></a>
-                                <a href="#!"><i class="material-icons">delete</i></a>
+                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
                     </li>
@@ -59,8 +59,8 @@
                         <div>
                             Something to do 2...
                             <span href="#!" class="secondary-content">
-                                <a href="#!"><i class="material-icons">done</i></a>
-                                <a href="#!"><i class="material-icons">delete</i></a>
+                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
                     </li>
@@ -68,8 +68,8 @@
                         <div>
                             Something to do 3...
                             <span href="#!" class="secondary-content teal-text">
-                                <a href="#!"><i class="material-icons">done</i></a>
-                                <a href="#!"><i class="material-icons">delete</i></a>
+                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
                     </li>
@@ -77,8 +77,8 @@
                         <div>
                             Something to do 4...
                             <span href="#!" class="secondary-content">
-                                <a href="#!"><i class="material-icons">done</i></a>
-                                <a href="#!"><i class="material-icons">delete</i></a>
+                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
                     </li>
@@ -86,8 +86,8 @@
                         <div>
                             Something to do 5...
                             <span href="#!" class="secondary-content">
-                                <a href="#!"><i class="material-icons">done</i></a>
-                                <a href="#!"><i class="material-icons">delete</i></a>
+                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
                     </li>
