Mark todos as done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li class="collection-item">
                         <div>
                             Something to do 3...
-                            <span href="#!" class="secondary-content teal-text">
+                            <span href="#!" class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
