--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                     </li>
                     <li class="collection-item">
                         <div>
-                            Something to do 1...
-                            <span href="#!" class="secondary-content">
+                            <span class="todo-text">
+                                Something to do 1...
+                            </span>
+                            <span class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
@@ -57,8 +59,10 @@
                     </li>
                     <li class="collection-item">
                         <div>
-                            Something to do 2...
-                            <span href="#!" class="secondary-content">
+                            <span class="todo-text">
+                                Something to do 2...
+                            </span>
+                            <span class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
@@ -66,8 +70,10 @@
                     </li>
                     <li class="collection-item">
                         <div>
-                            Something to do 3...
-                            <span href="#!" class="secondary-content">
+                            <span class="todo-text">
+                                Something to do 3...
+                            </span>
+                            <span class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
@@ -75,8 +81,10 @@
                     </li>
                     <li class="collection-item">
                         <div>
-                            Something to do 4...
-                            <span href="#!" class="secondary-content">
+                            <span class="todo-text">
+                                Something to do 4...
+                            </span>
+                            <span class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
@@ -84,8 +92,10 @@
                     </li>
                     <li class="collection-item">
                         <div>
-                            Something to do 5...
-                            <span href="#!" class="secondary-content">
+                            <span class="todo-text">
+                                Something to do 5...
+                            </span>
+                            <span class="secondary-content">
                                 <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
