Use Materialize checkboxes to mark todos as done or to be done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                                 Something to do 1...
                             </span>
                             <span class="secondary-content">
-                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <label>
+                                    <input type="checkbox" class="filled-in" />
+                                    <span></span>
+                                </label>
+                                <!-- <a href="#!" class="done-btn"><i class="material-icons">done</i></a> -->
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
@@ -63,7 +67,11 @@
                                 Something to do 2...
                             </span>
                             <span class="secondary-content">
-                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <label>
+                                    <input type="checkbox" class="filled-in" />
+                                    <span></span>
+                                </label>
+                                <!-- <a href="#!" class="done-btn"><i class="material-icons">done</i></a> -->
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
@@ -74,7 +82,11 @@
                                 Something to do 3...
                             </span>
                             <span class="secondary-content">
-                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <label>
+                                    <input type="checkbox" class="filled-in" />
+                                    <span></span>
+                                </label>
+                                <!-- <a href="#!" class="done-btn"><i class="material-icons">done</i></a> -->
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
@@ -85,7 +97,11 @@
                                 Something to do 4...
                             </span>
                             <span class="secondary-content">
-                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <label>
+                                    <input type="checkbox" class="filled-in" />
+                                    <span></span>
+                                </label>
+                                <!-- <a href="#!" class="done-btn"><i class="material-icons">done</i></a> -->
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
@@ -96,7 +112,11 @@
                                 Something to do 5...
                             </span>
                             <span class="secondary-content">
-                                <a href="#!" class="done-btn"><i class="material-icons">done</i></a>
+                                <label>
+                                    <input type="checkbox" class="filled-in" />
+                                    <span></span>
+                                </label>
+                                <!-- <a href="#!" class="done-btn"><i class="material-icons">done</i></a> -->
                                 <a href="#!" class="delete-btn"><i class="material-icons">delete</i></a>
                             </span>
                         </div>
