Implement todos searching

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li class="collection-item">
                         <div>
                             <span class="todo-text">
-                                Something to do 1...
+                                Feed the cat
                             </span>
                             <span class="secondary-content">
                                 <label>
@@ -64,7 +64,7 @@
                     <li class="collection-item">
                         <div>
                             <span class="todo-text">
-                                Something to do 2...
+                                Work on wether API
                             </span>
                             <span class="secondary-content">
                                 <label>
@@ -79,7 +79,7 @@
                     <li class="collection-item">
                         <div>
                             <span class="todo-text">
-                                Something to do 3...
+                                Do the shoppings
                             </span>
                             <span class="secondary-content">
                                 <label>
@@ -94,7 +94,7 @@
                     <li class="collection-item">
                         <div>
                             <span class="todo-text">
-                                Something to do 4...
+                                Read a book
                             </span>
                             <span class="secondary-content">
                                 <label>
@@ -109,7 +109,7 @@
                     <li class="collection-item">
                         <div>
                             <span class="todo-text">
-                                Something to do 5...
+                                Book the flight
                             </span>
                             <span class="secondary-content">
                                 <label>
